--- a/OneInTheQuiver/plugin.yml
+++ b/OneInTheQuiver/plugin.yml
@@ -1,5 +1,5 @@
 name: OneInTheQuiver
-author: AppleDevelops
-version: 1.0.0
-api: [3.0.0-ALPHA6]
-main: OITQ\Loader
+author: Wumpotamus
+version: 2.0.0
+api: [3.0.0]
+main: oitq\Loader
